--- a/docs/pages/components/form-group.mdx
+++ b/docs/pages/components/form-group.mdx
@@ -1,19 +1,241 @@
 import { ComponentLayout } from "components/layouts/ComponentLayout";
-import { FormGroup } from "@nice-digital/nds-form-group";
-import { Radio } from "@nice-digital/nds-radio";
+import { Example } from "components/examples/Example";
+import { ExampleGroup, DefaultGroup, InlineGroup, HintsGroup, ErrorGroup } from "components/examples/FormGroup";
 
 export const meta = {
 	title: "Form Group",
+	description: "Use a form group to show a relationship between multiple form inputs.",
 	npmUrl: "https://www.npmjs.com/package/@nice-digital/nds-form-group",
-	gitHubUrl: "https://github.com/nice-digital/nice-design-system/blob/main/components/nds-form-group"
+	gitHubUrl: "https://github.com/nice-digital/nice-design-system/blob/main/components/nds-form-group",
+	component: ExampleGroup
 };
 
-# {meta.title}
+## Introduction/what is it?
 
-*** Placeholder component page ***
+Use a form group to show a relationship between multiple form inputs. For example, when asking for an address, you may need to group a set of text inputs into a single form group.
 
-<FormGroup legend="How would you like us to contact you?" name="contact-preference">
-	...elements
+If you're using radios, checkboxes or input, the fieldset will already be included.
+
+## Code snippets
+
+[Code snippets to be added to live site].
+
+## When to use
+
+Use a form group component to group related form inputs.
+
+## When not use
+
+If users need to be able to pick more than one option from a list, use the checkboxes component instead.
+
+## How to use
+
+The 1st element in a fieldset must be a `legend` describing the input group. For example, it could be a question, such as "What is your organisation's name?" or a statement like "Personal information".
+
+If you are asking just 1 question per page, as we recommend, you can set the contents of the `legend` as the page heading. You can see an example below. It is good practice as it means that users of screen readers will only hear the contents once.
+
+Read more about [why and how to set legends as headings](https://design-system.service.gov.uk/get-started/labels-legends-headings/) on the [GOV.UK](http://GOV.UK) Design System.
+
+## Default form group
+
+<Example>
+<DefaultGroup />
+
+<CH.Code>
+```js React
+<FormGroup
+	legend="Are you happy for us to contact you in the future?"
+	name="contact-preference"
+>
+	<Radio label="Yes" value="yes" />
+	<Radio label="No" value="no" />
 </FormGroup>
+```
+```html HTML
+<fieldset class="form-group" data-component="form-group">
+  <legend class="form-group__legend">
+    Are you happy for us to contact you in the future?
+  </legend>
+  <div class="radio" data-component="radio">
+    <input
+      class="radio__input"
+      name="contact-preference"
+      type="radio"
+      id="contact-preference_yes"
+    /><label class="radio__label" for="contact-preference_yes">Yes</label>
+  </div>
+  <div class="radio" data-component="radio">
+    <input
+      class="radio__input"
+      name="contact-preference"
+      type="radio"
+      id="contact-preference_no"
+    /><label class="radio__label" for="contact-preference_no">No</label>
+  </div>
+</fieldset>
+```
+</CH.Code>
+</Example>
+
+## Inline radios
+
+<Example>
+<InlineGroup />
+
+<CH.Code>
+```js React
+<FormGroup
+	legend="Are you happy for us to contact you in the future?"
+	name="contact-preference-inline"
+	inline
+>
+	<Radio label="Yes" value="yes" />
+	<Radio label="No" value="no" />
+</FormGroup>
+```
+```html HTML
+<fieldset class="form-group" data-component="form-group--inline">
+  <legend class="form-group__legend">
+    Are you happy for us to contact you in the future?
+  </legend>
+  <div class="radio radio--inline" data-component="radio--inline">
+    <input
+      class="radio__input"
+      name="contact-preference-inline"
+      type="radio"
+      id="contact-preference-inline_yes"
+    /><label class="radio__label" for="contact-preference-inline_yes"
+      >Yes</label
+    >
+  </div>
+  <div class="radio radio--inline" data-component="radio--inline">
+    <input
+      class="radio__input"
+      name="contact-preference-inline"
+      type="radio"
+      id="contact-preference-inline_no"
+    /><label class="radio__label" for="contact-preference-inline_no">No</label>
+  </div>
+</fieldset>
+```
+</CH.Code>
+</Example>
+
+## Form group with hints
+
+You can add hints to form groups to provide additional information about the options.
+
+Placeholder image - live preview to be used on Design system site.
+
+<Example>
+<HintsGroup />
+
+<CH.Code>
+```js React
+<FormGroup
+	legend="How would you like us to contact you?"
+	hint="We promise not to contact you too often"
+>
+	<Checkbox label="Email" value="email" name="contact-preference-hints" />
+	<Checkbox label="Telephone" value="phone" name="contact-preference-hints" />
+</FormGroup>
+```
+```html HTML
+<fieldset class="form-group" data-component="form-group">
+  <legend class="form-group__legend">
+    How would you like us to contact you?
+  </legend>
+  <p class="form-group__hint">We promise not to contact you too often</p>
+  <div class="checkbox" data-component="checkbox">
+    <div>
+      <input
+        type="checkbox"
+        class="checkbox__input"
+        id="undefined_email"
+        value="email"
+      /><label class="checkbox__label" for="undefined_email">Email</label>
+    </div>
+  </div>
+  <div class="checkbox" data-component="checkbox">
+    <div>
+      <input
+        type="checkbox"
+        class="checkbox__input"
+        id="undefined_phone"
+        value="phone"
+      /><label class="checkbox__label" for="undefined_phone">Telephone</label>
+    </div>
+  </div>
+</fieldset>
+```
+</CH.Code>
+</Example>
+
+## Error messages
+
+Form group error messages should be styled like this:
+
+<Example>
+<ErrorGroup />
+
+<CH.Code>
+```js React
+<FormGroup
+	legend="How would you like us to contact you?"
+	groupError="Please choose at least one contact method!"
+>
+	<Checkbox label="Email" value="email" name="contact-preference-error" />
+	<Checkbox label="Telephone" value="phone" name="contact-preference-error" />
+</FormGroup>
+```
+```html HTML
+<fieldset class="form-group" data-component="form-group">
+  <legend class="form-group__legend">
+    How would you like us to contact you?
+  </legend>
+  <p class="form-group__error-message">
+    Please choose at least one contact method!
+  </p>
+  <div class="checkbox" data-component="checkbox">
+    <div>
+      <input
+        type="checkbox"
+        class="checkbox__input"
+        id="undefined_email"
+        value="email"
+      /><label class="checkbox__label" for="undefined_email">Email</label>
+    </div>
+  </div>
+  <div class="checkbox" data-component="checkbox">
+    <div>
+      <input
+        type="checkbox"
+        class="checkbox__input"
+        id="undefined_phone"
+        value="phone"
+      /><label class="checkbox__label" for="undefined_phone">Telephone</label>
+    </div>
+  </div>
+</fieldset>
+
+```
+</CH.Code>
+</Example>
+
+## Accessibility
+
+On question pages containing a group of inputs, include the question as the legend as that helps screen reader users understand that the inputs are all related to that question.
+
+Put any essential help text that cannot be written as hint text in the legend, but keep it as concise as possible.
+
+Component meets WCAG AA guidelines for accessibility on:
+
+- Text contrast - Text has a contrast ratio of at least 4.5:1 for small text and at least 3:1 for large text (WCAG 2.0 )1.4.3).
+- UI contrast - Visual information required to identify components and states (except inactive components) has a contrast ratio of at least 3:1 (WCAG 2.1 1.4.11).
+- Accessible use of colour - Colour is not used as the only visual means of conveying information (WCAG 2.0 1.4.1).
+
+## Research/evidence
+
+We tested the radio component on a "In consultation Comment Collection" prototype in 2021. Users understood the purpose of the radios and were able to use them.
 
 export default ({ children }) => <ComponentLayout meta={meta}>{children}</ComponentLayout>;
